@@ -1,11 +1,11 @@
 
 // Show the modal window of inventory search
-function show_inventory_search(search_free, id_object_type_search, owner_search, id_manufacturer_search, id_contract_search, search, object_fields_search, offset) {
+function show_inventory_search(search_free, id_object_type_search, owner_search, id_manufacturer_search, id_contract_search, search, object_fields_search, last_update_search, offset) {
 	
 	$.ajax({
 		type: "POST",
 		url: "ajax.php",
-		data: "page=include/ajax/inventories&get_inventory_search=1&search_free="+search_free+"&id_object_type_search="+id_object_type_search+"&owner_search="+owner_search+"&id_manufacturer_search="+id_manufacturer_search+"&id_contract_search="+id_contract_search+"&object_fields_search="+object_fields_search+"&search=1&offset="+offset,
+		data: "page=include/ajax/inventories&get_inventory_search=1&search_free="+search_free+"&id_object_type_search="+id_object_type_search+"&owner_search="+owner_search+"&id_manufacturer_search="+id_manufacturer_search+"&id_contract_search="+id_contract_search+"&object_fields_search="+object_fields_search+"&search=1&offset="+offset+"&last_update_search="+last_update_search,
 		dataType: "html",
 		success: function(data){	
 			
@@ -32,7 +32,7 @@ function show_inventory_search(search_free, id_object_type_search, owner_search,
 								
 				offset = id.substr(5,id.length);
 
-				show_inventory_search(search_free, id_object_type_search, owner_search, id_manufacturer_search, id_contract_search, search, object_fields_search, offset)
+				show_inventory_search(search_free, id_object_type_search, owner_search, id_manufacturer_search, id_contract_search, search, object_fields_search, last_update_search, offset)
 			});
 			
 			var idUser = "<?php echo $config['id_user'] ?>";
@@ -368,11 +368,19 @@ function loadParams() {
 	owner_search = $('#text-owner_search').val();
 	id_manufacturer_search = $('#id_manufacturer_search').val();
 	id_contract_search = $('#id_contract_search').val();
+	
+	if ($("#checkbox-last_update_search").is(":checked")) {
+		last_update_search = 1;
+	} else {
+		last_update_search = 0;
+	}
+
+	offset = 0;
 	search = 1;
 	
 	object_fields_search = $("select[name='object_fields_search[]']").val();
 		
-	show_inventory_search(search_free, id_object_type_search, owner_search, id_manufacturer_search, id_contract_search, search, object_fields_search);
+	show_inventory_search(search_free, id_object_type_search, owner_search, id_manufacturer_search, id_contract_search, search, object_fields_search, last_update_search, offset);
 }
 
 //Show custom fields
